--- a/src/AQFWS.DbMigrator/appsettings.json
+++ b/src/AQFWS.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=AQFWS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=.;Database=AQFWS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
     "Clients": {
