--- a/src/AQFWS.Web/appsettings.json
+++ b/src/AQFWS.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44331"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=AQFWS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=.;Database=AQFWS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthServer": {
     "Authority": "https://localhost:44331",
